--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,9 @@ coverage
 # Grunt intermediate storage (http://gruntjs.com/creating-plugins#storing-task-files)
 .grunt
 
+#.idea folder
+.idea/
+
 # node-waf configuration
 .lock-wscript
 
